@@ -1,3 +1,8 @@
+2010-02-17 Added Gokhan's and Mattias' customizable keybindings patch
+           for the toolbar.  You can now set the keymap.* properties
+           in the matplotlibrc file.  Newbindings were added for
+           toggling log scaling on the x-axis. JDH
+
 2010-02-16 Committed TJ's filled marker patch for
            left|right|bottom|top|full filled markers.  See
            examples/pylab_examples/filledmarker_demo.py. JDH
